swdemo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopware
  namespace: swdemo
  labels:
    app: shopware
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopware
  template:
    metadata:
      labels:
        app: shopware
    spec:
      containers:
        - name: shopware
          image: ghcr.io/friendsofshopware/shopware-demo-environment:6.7.15 # {"$imagepolicy": "flux-system:swdemo-shopware"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "2000m"
---
apiVersion: v1
kind: Service
metadata:
  name: shopware
  namespace: swdemo
spec:
  selector:
    app: shopware
  ports:
    - port: 80
      targetPort: 8000
