swdemo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: swdemo
  namespace: swdemo
spec:
  parentRefs:
    - name: eg
      namespace: default
      sectionName: fos-gg-https
  hostnames:
    - demo.fos.gg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: shopware
          port: 80
---
# Redirect plain HTTP to HTTPS for demo.fos.gg.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: swdemo-redirect
  namespace: swdemo
spec:
  parentRefs:
    - name: eg
      namespace: default
      sectionName: fos-gg-http
  hostnames:
    - demo.fos.gg
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
